kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: opc-server-3dpr
spec:
  selector:
    app: opc-server-3dpr
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
    - protocol: TCP
      port: 26543
      targetPort: 26543
      name: opc
