kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opc-server-3dpr-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
          - "ziiot.aplitastra.ru"
  rules:
    - host: "ziiot.aplitastra.ru"
      http:
        paths:
          - pathType: Prefix
            path: "/datagen/opc-server-3dpr"
            backend:
              service:
                name: opc-server-3dpr
                port:
                  number: 3000
          - pathType: Prefix
            path: "/datagen/opc-server-3dpr"
            backend:
              service:
                name: opc-server-3dpr
                port:
                  number: 3000
